16_subseq/grade.txt
Grading at Tue Jul 24 22:18:21 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:13:9: error: ‘curVal’ undeclared (first use in this function)
         curVal = array + i;
         ^
maxSeq.c:13:9: note: each undeclared identifier is reported only once for each function it appears in
maxSeq.c:15:9: error: expected ‘;’ before ‘if’
         if (*curVal > *lastVal){
         ^
maxSeq.c:11:11: error: variable ‘lastVal’ set but not used [-Werror=unused-but-set-variable]
     int * lastVal = array;
           ^
maxSeq.c:10:11: error: unused variable ‘curValP’ [-Werror=unused-variable]
     int * curValP = array;
           ^
maxSeq.c:9:9: error: unused variable ‘curSeqLen’ [-Werror=unused-variable]
     int curSeqLen = 1;
         ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
